# AlphaZero

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
AlphaZeroPytorch/: AlphaZeroPytorch.cpp  AlphaZeroPytorch.h  CMakeLists.txt  Replay.cpp  convertToJceFormat.cpp  doEloRaiting.cpp  makeFiles.hpp  renderLoss.py  runServer.cpp  showLoss.cpp  test.cpp  toCPU.cpp
AlphaZeroPytorch/enc_temp_folder/192c34c2e3096a06f115516597d95ef/: AlphaZeroPytorch.cpp
AlphaZeroPytorch/enc_temp_folder/855045a9d8b49b9caf7b5d634b6b7a/: MCTS.cpp
AlphaZeroPytorch/include/: config.cpp  config.hpp  io.hpp  log.cpp  log.hpp  timer.hpp
AlphaZeroPytorch/include/Server/: eloClient.hpp  server.cpp  server.hpp
AlphaZeroPytorch/include/ai/: MCTS.cpp  MCTS.hpp  agent.cpp  agent.hpp  memory.cpp  memory.hpp  model.hpp  modelSynchronizer.hpp  modelWorker.cpp  modelWorker.hpp  playGame.cpp  playGame.hpp  utils.hpp
AlphaZeroPytorch/include/game/: game.cpp  game.hpp
AlphaZeroPytorch/include/jce/: load.hpp  save.hpp  string.hpp  vector.hpp
AlphaZeroPytorch/include/random/: dirichlet.hpp
AlphaZeroPytorch/include/test/: testSuit.cpp  testSuit.hpp  testUtils.hpp
Clients/ConsoleClient/: ConsoleClient.cpp  ConsoleClient.h
Clients/ConsoleClient/include/: agent.hpp  game.hpp  modifications.hpp
Clients/ConsoleClient/scr/: game.cpp
Clients/iosClient/: caller.py  caller_debug.py  connect4IOS.py  connect4IOS_d.py
Clients/pyClient/: Client.py  GUI.py  game.py  gameSaver.py  main.py  test.py  winStates.json
elo/: agent.py  config.py  elos.json  renderElo.py  score.py  server.py  setup.py
elo/data/: accounts.json  connect4.json
games/connect4/: config.hpp  game.cpp  game.hpp
games/othello/: config.hpp  game.cpp  game.hpp
test/: model_mockup.py  myModel.torch  testServer.py
